--- a/apps/web/templates/application.html.erb
+++ b/apps/web/templates/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Web</title>
+    <title>React on Hanami</title>
     <%= favicon %>
-     <%= stylesheet 'build' %>
+    <%= stylesheet 'build' %>     
   </head>
   <body>
     <%= yield %>
